// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SocialIcon component should apply values from theme 1`] = `
<View
  replaceTheme={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#4267B2",
      "borderRadius": 30,
      "flexDirection": "row",
      "height": 52,
      "justifyContent": "center",
      "margin": 7,
      "shadowColor": "rgba(0,0,0, .4)",
      "shadowOffset": Object {
        "height": 1,
        "width": 1,
      },
      "shadowOpacity": 1,
      "shadowRadius": 1,
      "width": 52,
    }
  }
  theme={
    Object {
      "SocialIcon": Object {
        "type": "facebook",
      },
      "colors": Object {
        "black": "#242424",
        "disabled": "hsl(208, 8%, 90%)",
        "divider": "#bcbbc1",
        "error": "#ff190c",
        "grey0": "#393e42",
        "grey1": "#43484d",
        "grey2": "#5e6977",
        "grey3": "#86939e",
        "grey4": "#bdc6cf",
        "grey5": "#e1e8ee",
        "greyOutline": "#bbb",
        "platform": Object {
          "android": Object {
            "error": "#f44336",
            "grey": "rgba(0, 0, 0, 0.54)",
            "primary": "#2196f3",
            "secondary": "#9C27B0",
            "success": "#4caf50",
            "warning": "#ffeb3b",
          },
          "ios": Object {
            "error": "#ff3b30",
            "grey": "#7d7d7d",
            "primary": "#007aff",
            "searchBg": "#dcdce1",
            "secondary": "#5856d6",
            "success": "#4cd964",
            "warning": "#ffcc00",
          },
        },
        "primary": "#2089dc",
        "searchBg": "#303337",
        "secondary": "#ca71eb",
        "success": "#52c41a",
        "warning": "#faad14",
        "white": "#ffffff",
      },
    }
  }
  underlayColor="#4267B2"
  updateTheme={[Function]}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "overflow": "hidden",
        }
      }
    >
      <View
        replaceTheme={[Function]}
        updateTheme={[Function]}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "justifyContent": "center",
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "white",
                  "fontSize": 24,
                },
                Object {
                  "backgroundColor": "transparent",
                },
                Object {
                  "fontFamily": "FontAwesome",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
            testID="iconIcon"
          >
            
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`SocialIcon component should have width and height based on iconSize 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": undefined,
      "borderRadius": 48,
      "flexDirection": "row",
      "height": 52,
      "justifyContent": "center",
      "margin": 7,
      "width": 52,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Themed.Icon
      color="white"
      iconStyle={Object {}}
      size={24}
      type="font-awesome"
    />
  </View>
</View>
`;

exports[`SocialIcon component should render light social icon 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "white",
      "borderRadius": 30,
      "flexDirection": "row",
      "justifyContent": "center",
      "margin": 7,
    }
  }
  underlayColor="white"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Themed.Icon
      color="#02b875"
      iconStyle={Object {}}
      name="medium"
      size={24}
      type="font-awesome"
    />
  </View>
</View>
`;

exports[`SocialIcon component should render social icon button 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#4267B2",
      "borderRadius": 30,
      "flexDirection": "row",
      "justifyContent": "center",
      "margin": 7,
      "paddingBottom": 14,
      "paddingTop": 14,
      "shadowColor": "rgba(0,0,0, .4)",
      "shadowOffset": Object {
        "height": 1,
        "width": 1,
      },
      "shadowOpacity": 1,
      "shadowRadius": 1,
    }
  }
  underlayColor="#4267B2"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Themed.Icon
      color="white"
      iconStyle={Object {}}
      name="facebook"
      size={24}
      type="font-awesome"
    />
    <Themed.Text
      style={
        Object {
          "color": "white",
          "fontWeight": "bold",
          "marginLeft": 15,
        }
      }
    >
      Sign In With Facebook
    </Themed.Text>
  </View>
</View>
`;

exports[`SocialIcon component should render without issues 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#00aced",
      "borderRadius": 30,
      "flexDirection": "row",
      "height": 52,
      "justifyContent": "center",
      "margin": 7,
      "shadowColor": "rgba(0,0,0, .4)",
      "shadowOffset": Object {
        "height": 1,
        "width": 1,
      },
      "shadowOpacity": 1,
      "shadowRadius": 1,
      "width": 52,
    }
  }
  underlayColor="#00aced"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Themed.Icon
      color="white"
      iconStyle={Object {}}
      name="twitter"
      size={24}
      type="font-awesome"
    />
  </View>
</View>
`;

exports[`SocialIcon component should use style and font from props 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "pink",
      "borderRadius": 30,
      "flexDirection": "row",
      "justifyContent": "center",
      "margin": 7,
      "paddingBottom": 14,
      "paddingTop": 14,
      "shadowColor": "rgba(0,0,0, .4)",
      "shadowOffset": Object {
        "height": 1,
        "width": 1,
      },
      "shadowOpacity": 1,
      "shadowRadius": 1,
    }
  }
  underlayColor="white"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Themed.Icon
      color="#000000"
      iconStyle={
        Object {
          "borderWidth": 1,
        }
      }
      name="github"
      size={24}
      type="font-awesome"
    />
    <Themed.Text
      style={
        Object {
          "color": "#000000",
          "fontFamily": "arial",
          "fontWeight": "bold",
          "justifyContent": "center",
          "marginLeft": 15,
        }
      }
    >
      title
    </Themed.Text>
  </View>
</View>
`;
